Fixed MarketItem lore exception